--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "op": "^0.0.6",
+    "path": "^0.12.7",
     "qrcode": "^1.4.4",
     "sequelize": "^5.21.5",
     "yup": "^0.28.3"
