--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "flat": "^5.0.2",
     "history": "^4.10.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
@@ -20,8 +21,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactotron-redux": "^3.1.3",
     "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.3",
     "redux": "^4.0.5",
     "styled-components": "^5.1.0",
     "uuid": "^8.0.0"
