--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
     "flat": "^5.0.2",
     "history": "^4.10.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.13.1",
